Tests/ContributeWordPressTests/Helpers/Error/EquatableError.swift
import Foundation

internal protocol EquatableError: Error, Equatable {}
